# nih-plug

./: Cargo.toml  README.md
.github/workflows/: docs.yml
crates/cargo_nih_plug/: Cargo.toml
crates/nih_plug_derive/: Cargo.toml
crates/nih_plug_derive/src/: params.rs
crates/nih_plug_xtask/: Cargo.toml
crates/nih_plug_xtask/src/: symbols.rs
crates/xtask/: Cargo.toml
examples/byo_gui_gl/: Cargo.toml
examples/byo_gui_gl/src/: lib.rs
examples/byo_gui_softbuffer/: Cargo.toml
examples/byo_gui_softbuffer/src/: lib.rs
examples/byo_gui_wgpu/: Cargo.toml
examples/gain/: Cargo.toml
examples/midi_inverter/: Cargo.toml
examples/poly_mod_synth/: Cargo.toml
examples/sine/: Cargo.toml
examples/stft/: Cargo.toml
examples/sysex/: Cargo.toml
nih_plug_derive/: Cargo.toml
nih_plug_derive/src/: enums.rs
nih_plug_xtask/: Cargo.toml
plugins/buffr_glitch/: Cargo.toml
plugins/crisp/: Cargo.toml  README.md
plugins/crossover/: Cargo.toml
plugins/crossover/src/: lib.rs
plugins/crossover/src/crossover/: fir.rs
plugins/crossover/src/crossover/fir/: filter.rs
plugins/diopser/: Cargo.toml  README.md
plugins/examples/byo_gui_gl/: Cargo.toml
plugins/examples/byo_gui_gl/src/: lib.rs
plugins/examples/byo_gui_softbuffer/: Cargo.toml
plugins/examples/byo_gui_wgpu/: Cargo.toml
plugins/examples/byo_gui_wgpu/src/: lib.rs
plugins/examples/gain/: Cargo.toml
plugins/examples/gain_gui_egui/: Cargo.toml
plugins/examples/midi_inverter/: Cargo.toml
plugins/examples/poly_mod_synth/: Cargo.toml
plugins/examples/poly_mod_synth/src/: lib.rs
plugins/examples/sine/: Cargo.toml
plugins/examples/stft/: Cargo.toml
plugins/examples/sysex/: Cargo.toml
plugins/loudness_war_winner/: Cargo.toml
plugins/puberty_simulator/: Cargo.toml
plugins/safety_limiter/: Cargo.toml
plugins/soft_vacuum/: Cargo.toml
plugins/soft_vacuum/src/: lib.rs
plugins/spectral_compressor/: Cargo.toml  README.md
src/: editor.rs  lib.rs  params.rs  prelude.rs
src/buffer/: blocks.rs  samples.rs
src/context/: init.rs
src/event_loop/: macos.rs  windows.rs
src/params/: boolean.rs  float.rs  integer.rs  internals.rs  smoothing.rs
src/util/: stft.rs
src/wrapper/: clap.rs  state.rs  util.rs  vst3.rs
src/wrapper/clap/: context.rs  wrapper.rs
src/wrapper/standalone/: backend.rs  config.rs  context.rs  wrapper.rs
src/wrapper/standalone/backend/: cpal.rs  dummy.rs  jack.rs
src/wrapper/util/: buffer_management.rs
src/wrapper/vst3/: context.rs  inner.rs  util.rs  view.rs  wrapper.rs
