[package]
name = "nih_plug"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["audio", "plugin", "vst", "vst3"]
description = "A simple but modern API-agnostic audio plugin framework"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = [
  "Robbert van der Helm <mail@robbertvanderhelm.nl>",
  "Billy Messenger <billydm@noreply.codeberg.org>"
]
license = "ISC"
repository = "https://github.com/BillyDM/nih-plug"

[workspace]
resolver = "2"
members = [
  "nih_plug_derive",
  "nih_plug_xtask",

  "cargo_nih_plug",
  "xtask",

  "plugins/examples/byo_gui_gl",
  "plugins/examples/byo_gui_softbuffer",
  "plugins/examples/byo_gui_wgpu",
  "plugins/examples/gain",
  "plugins/examples/midi_inverter",
  "plugins/examples/poly_mod_synth",
  "plugins/examples/sine",
  "plugins/examples/stft",
  "plugins/examples/sysex",

  "plugins/soft_vacuum",
  "plugins/buffr_glitch",
  "plugins/crossover",
  "plugins/loudness_war_winner",
  "plugins/puberty_simulator",
  "plugins/safety_limiter",
  # TODO: Create updated GUIs for these plugins
  #"plugins/crisp",
  #"plugins/diopser",
  #"plugins/spectral_compressor",
]

[features]
default = ["vst3"]
# Enabling this feature will cause the plugin to terminate when allocations
# occur in the processing function during debug builds. Keep in mind that panics
# may also allocate if they use string formatting, so temporarily disabling this
# feature may be necessary when debugging panics in DSP code.
assert_process_allocs = ["dep:assert_no_alloc"]
# Enables an export target for standalone binaries through the
# `nih_export_standalone()` function. Disabled by default as this requires
# building additional dependencies for audio and MIDI handling.
standalone = ["dep:baseview", "dep:clap", "dep:cpal", "dep:jack", "dep:midir", "dep:rtrb"]
# Enables opengl support in standalone mode.
# TODO: Send PR to baseview to derive Default for WindowOpenOptions so that
# this isn't necessary.
standalone-opengl = ["standalone", "baseview?/opengl"]
# Enables the `nih_export_vst3!()` macro. Enabled by default. This feature
# exists mostly for GPL-compliance reasons, since even if you don't use the VST3
# wrapper you might otherwise still include a couple (unused) symbols from the
# `vst3-sys` crate.
vst3 = ["dep:vst3-sys"]
# Add adapters to the Buffer object for reading the channel data to and from
# `std::simd` vectors. Requires a nightly compiler.
simd = []
# Compress plugin state using the Zstandard algorithm. Loading uncompressed
# state is still supported so existing state will still load after enabling this
# feature for a plugin, but it can not be disabled again without losing state
# compatibility.
zstd = ["dep:zstd"]
# Only relevant when generating docs, adds the `doc_auto_cfg` nightly feature
docs = []

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
atomic_float = "1.1"
atomic_refcell = "0.1"
bitflags = "2.11"
baseview = { git = "https://github.com/tomoyanonymous/baseview.git", rev = "f65c76424077b593d536e79c606798541b1984b3", default-features = false }
raw-window-handle = "0.5"
realfft = "3.0"
approx = "0.5.1"
crossbeam = "0.8"
open = "5.3.3"
triple_buffer = "9.0.0"
cfg-if = "1.0"
rtrb = "0.3.3"
semver = "1.0.27"
pollster = "0.4.0"
parking_lot = "0.12"

[dependencies]
nih_plug_derive = { path = "nih_plug_derive" }
serde.workspace = true
anyhow.workspace = true
anymap3 = "1.0.1"
atomic_float.workspace = true
atomic_refcell.workspace = true
backtrace = "0.3.65"
bitflags.workspace = true
cfg-if.workspace = true
# This supports CLAP 1.2.2
clap-sys = {  git = "https://github.com/micahrj/clap-sys.git", rev = "25d7f53fdb6363ad63fbd80049cb7a42a97ac156" }
crossbeam.workspace = true
log = "0.4"
midi-consts = "0.1"
nih_log = "0.3.1"
parking_lot.workspace = true
raw-window-handle.workspace = true
serde_json = "1.0"
widestring = "1.2.1"
# Used for the `assert_process_allocs` feature
assert_no_alloc = { git = "https://github.com/robbert-vdh/rust-assert-no-alloc.git", branch = "feature/nested-permit-forbid", features = ["backtrace", "log"], optional = true }
# Used for the `standalone` feature
baseview = { workspace = true, optional = true }
# All the claps!
clap = { version = "4.1.8", features = ["derive", "wrap_help"], optional = true }
cpal = { version = "0.16", optional = true }
jack = { version = "0.13.5", optional = true }
midir = { version = "0.10.3", optional = true }
rtrb = { workspace = true, optional = true }
# Used for the `vst3` feature
vst3-sys = { git = "https://github.com/robbert-vdh/vst3-sys.git", branch = "fix/drop-box-from-raw", optional = true }
# Used for the `zstd` feature
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
approx.workspace = true
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
libc = "0.2.124"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
core-foundation = "0.9.3"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Performance",
]

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
