[package]
name = "byo_gui_gl"
version = "0.1.0"
edition.workspace = true
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
license.workspace = true
description = "A simple example plugin with a raw OpenGL context for rendering"
publish = false

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { path = "../../", features = ["assert_process_allocs", "standalone-opengl"] }
baseview = { workspace = true, features = ["opengl"] }
raw-window-handle.workspace = true
glow = "0.17"
crossbeam.workspace = true
atomic_float.workspace = true
# To make the state persistable
serde.workspace = true