[package]
name = "soft_vacuum"
version = "0.1.0"
edition.workspace = true
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/robbert-vdh/nih-plug/tree/master/plugins/soft_vacuum"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../../", features = ["assert_process_allocs"] }

[dev-dependencies]
approx.workspace = true
