[package]
name = "spectral_compressor"
version = "0.4.3"
edition.workspace = true
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/robbert-vdh/nih-plug/tree/master/plugins/spectral_compressor"
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
nih_plug = { path = "../../", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { path = "../../nih_plug_vizia" }
realfft.workspace = true

# For the GUI
atomic_float.workspace = true
crossbeam.workspace = true
open = "3.0"
serde = { version = "1.0", features = ["derive"] }
triple_buffer = "6.2"
