[package]
name = "byo_gui_gl"
version = "0.1.0"
edition = "2021"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
license = "ISC"

description = "A simple example plugin with a raw OpenGL context for rendering"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { path = "../../../", features = ["assert_process_allocs", "standalone-opengl"] }
baseview = { git = "https://github.com/tomoyanonymous/baseview.git", rev = "f65c76424077b593d536e79c606798541b1984b3", features = ["opengl"] }
raw-window-handle = "0.5"
glow = "0.17"
crossbeam = "0.8"
atomic_float = "1.1.0"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }