[package]
name = "byo_gui_wgpu"
version = "0.1.0"
edition.workspace = true
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
license.workspace = true
description = "A simple example plugin with a raw WGPU context for rendering"
publish = false

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
# NOTE: OpenGL support is not needed here, but rust-analyzer gets confused when
#       some crates do use it and others don't. You should disabled the opengl
#       feature in nih_plug and baseview in your crate.
nih_plug = { path = "../../../", features = ["assert_process_allocs", "standalone", "standalone-opengl"] }
baseview = { workspace = true, features = ["opengl"] }
wgpu = "29"
# Reduce wgpu log spam
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
tracing = { version = "0.1", features = ["max_level_warn", "release_max_level_info"] }
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
pollster.workspace = true
crossbeam.workspace = true
atomic_float.workspace = true
# To make the state persistable
serde.workspace = true