[package]
name = "poly_mod_synth"
version = "0.1.0"
edition.workspace = true
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../../../", features = ["assert_process_allocs"] }
rand = "0.10.0"
rand_pcg = "0.10.1"
